style.css
table {
  width: 300px;
  height: 300px;
  border-collapse: collapse;
  margin: 20px auto;
}

td {
  width: 60px;
  height: 60px;
  border: 1px solid black;
  text-align: center;
  cursor: pointer;
  overflow: hidden;
  position: relative;
  border-radius: 10px;
}

img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 10px;
}

img:hover {
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
}

#imageSelection {
  display: none;
  position: fixed;
  background-color: white;
  padding: 10px;
  border: 1px solid black;
  z-index: 100;
  border-radius: 10px;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-shadow:
    0 4px 8px rgba(0, 0, 0, 0.1),
    0 6px 20px rgba(0, 0, 0, 0.1);
  width: 300px;
  max-height: 90%;
  overflow-y: auto; /* To handle overflow of content */
}

#imageSelection img {
  width: 50px;
  height: 50px;
  margin: 5px;
  cursor: pointer;
  object-fit: contain;
  border-radius: 5px;
}

#overlay {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 50;
}

#resetButton {
  display: block;
  margin: 20px auto;
  padding: 10px 20px;
  background-color: red;
  color: white;
  border: none;
  cursor: pointer;
  font-size: 16px;
  border-radius: 5px;
}

/* Google fonts style */
body {
  font-family: "Proxima Nova", sans-serif;
}

.image-container {
  display: inline-block;
  position: relative;
}

.keyboard-shortcut {
  position: absolute;
  top: 5px;
  left: 5px;
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  padding: 2px 5px;
  border-radius: 3px;
}

.toast {
  position: absolute;
  top: 20px;
  left: 20px;
  padding: 10px;
  background-color: rgba(0, 0, 0, 0.8);
  color: white;
  border-radius: 5px;
  z-index: 1000;
  opacity: 1;
  transition: opacity 250ms;
}

.toast.fade {
  opacity: 0;
}

